--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 # Build and release Forge.app when a version tag is pushed
-# Usage: git tag v1.0.0 && git push origin v1.0.0
+# Usage: git tag v1.2.0 && git push origin v1.2.0
 
 name: Build and Release
 
@@ -27,16 +27,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pillow
+          pip install -r requirements.txt
+          pip install pyinstaller pillow
 
       - name: Create app icon
         run: python packaging/create_icon.py
 
-      - name: Build Forge.app
+      - name: Build with PyInstaller (self-contained)
         run: |
           export VERSION=${{ steps.version.outputs.VERSION }}
-          chmod +x packaging/build_app.sh
-          packaging/build_app.sh
+          pyinstaller Forge.spec -y
 
       - name: Create DMG
         run: |
@@ -77,9 +77,11 @@ jobs:
           body: |
             ## 🔥 Forge v${{ steps.version.outputs.VERSION }}
 
+            **Local AI Creative Suite for Mac** — No terminal needed.
+
             ### Download
 
-            - **macOS**: [Forge.dmg](https://github.com/${{ github.repository }}/releases/download/v${{ steps.version.outputs.VERSION }}/Forge-${{ steps.version.outputs.VERSION }}-macOS.dmg) — Apple Silicon recommended
+            - **macOS**: [Forge.dmg](https://github.com/${{ github.repository }}/releases/download/v${{ steps.version.outputs.VERSION }}/Forge-${{ steps.version.outputs.VERSION }}-macOS.dmg) (Apple Silicon recommended)
 
             ### Installation
 
@@ -87,7 +89,13 @@ jobs:
             2. Drag Forge to Applications
             3. Double-click to run
 
-            Forge will guide you through setting up ComfyUI and downloading your first model.
+            ### Requirements
+
+            - macOS 11+ (Big Sur or later)
+            - [ComfyUI](https://github.com/comfyanonymous/ComfyUI) for AI backends
+            - At least one AI model
+
+            Forge will guide you through setup on first run.
 
             ### What's New
 
